Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z9.java
/*
 * @test /nodynamiccopyright/
 * @bug 4865660
 * @summary implement "metadata" (attribute interfaces and program annotations)
 * @author gafter
 *
 * @compile/fail/ref=Z9.out -XDrawDiagnostics  Z9.java
 */

@interface An {
    <T> int x();
}
