Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z9.out
Z9.java:11:6: compiler.err.intf.annotation.members.cant.have.type.params
1 error
